# oral-prep

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
devproxy/: Caddyfile
oral_prep/: manage.py
oral_prep/core/: context_processors.py  models.py
oral_prep/core/management/commands/: createadmin.py
oral_prep/core/migrations/: 0001_initial.py
oral_prep/core/templates/core/: field_snippet.html
oral_prep/core/templatetags/: nav_extras.py
oral_prep/oral_prep/: asgi.py  settings.py  urls.py  wsgi.py
oral_prep/quiz/: admin.py  forms.py  models.py  urls.py  views.py
oral_prep/quiz/management/commands/: loadquestions.py
oral_prep/quiz/migrations/: 0001_initial.py  0002_import_questions.py  0002_preferences.py  0003_alter_question_options.py  0003_preferences.py
oral_prep/quiz/templates/quiz/: about.html  home.html  preferences.html  question-detail.html  search.html
oral_prep/quiz/templatetags/: markdown_extras.py
oral_prep/quiz/tests/: test_models.py
oral_prep/static/styles/: main.css
oral_prep/templates/: base.html
oral_prep/templates/account/: email_confirm.html  login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
oral_prep/templates/registration/: login.html
