[project]
name = "oral-prep"
version = "0.1.0"
description = "An oral prep tool for pilots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-allauth>=65.9.0",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.ruff.lint]
extend-select = [
    # isort
    "I"
]
