[project]
name = "oral-prep"
version = "0.1.0"
description = "An oral prep tool for pilots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-allauth>=65.9.0",
    "gunicorn>=23.0.0",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
    "postmarker>=1.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "oral_prep.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
pythonpath = ["oral_prep"]

[tool.ruff.lint]
extend-select = [
    # flake8-pytest-style
    "PT",
    # isort
    "I"
]
